# ChatbotAI

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
static/css/: styles.css
static/js/: script.js
templates/: index.html
