[tool.poetry]
name = "mental-health-chatbot"
version = "0.1.0"
description = "A mental health support chatbot"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-cors = "^4.0.0"
langchain = "^0.1.0"
gunicorn = "^20.1.0"
ollama = "^0.1.0"
langchain-ollama = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"